# gvsbuild

./: .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CNAME  README.md  appveyor.yml  azure-pipelines.yml  build.ps1  build.py  deps-graph.txt  deps.py  gtk.txt  hardening32.props  hardening64.props  hexchat-build.ps1  makefile  mod.md  mypy.ini  pango-tsc-package.autopkg  pyproject.toml  requirements.txt  stack.props  starter.py  tsc-azure-pipelines.yml
.github/: dependabot.yml  release-drafter.yml
atk/: mod.md  release-x64.bat  release-x86.bat
atkmm/: props.patch
cairo/: 0001-win32-Add-cairo-API-to-set-up-a-Win32-surface-for-an.patch  0002-win32-Add-a-win32-boilerplate-that-uses-a-real-windo.patch  cairo-array-vs-struct-initializer.patch  cairo-gobject.vcxproj  cairo.patch  cairo.vcxproj  mod.md  release-x64.bat  release-x86.bat
check-libs/: meson.build  test_atk.c  test_cairo.c  test_freetype2.c  test_gdk-pixbuf.c  test_glib.c  test_jasper.c  test_libjpeg-turbo.c  test_libjpeg.c  test_libpng.c  test_pango.c
cogl/: 003-cogl-framebuffer-missing-debug-return.patch
cyrus-sasl/: 0001-remove-snprintf-macro.patch
enchant/: build-x64.bat  build-x86.bat  mod.md
ffmpeg/: 0001-lavc-mpegvideo_enc-allow-low_delay-for-non-MPEG2-cod.patch
fontconfig/: build.vcxproj  config.h  dirent.c  fc-arch.vcxproj  fc-arch.vcxproj.filters  fc-cache.vcxproj  fc-case.vcxproj  fc-cat.vcxproj  fc-glyphname.vcxproj  fc-lang.vcxproj  fc-list.vcxproj  fc-match.vcxproj  fc-query.vcxproj  fc-scan.vcxproj  fontconfig.patch  fontconfig.props  fontconfig.sln  fontconfig.vcxproj  fontconfig.vcxproj.filters  mod.md  release-x64.bat  release-x86.bat
freetype/: mod.md  release-x64.bat  release-x86.bat
gdk-pixbuf/: gdk-pixbuf.patch  mod.md  release-x64.bat  release-x86.bat
gettext/: 0001-gettext-tools-Add-pre-configured-headers-and-sources.patch  0001-gettext-tools-src-x-lua.c-Fix-C99ism.patch  0002-gettext-tools-gnulib-lib-Declare-items-at-top-of-blo.patch  0005-gettext-runtime-intl-printf-parse.c-Fix-build-on-Vis.patch
gettext-runtime/: build-x64.bat  build-x86.bat  gettext-lib-prexif.patch  mod.md
glib/: 0001-Change-message-system-to-use-fputs-instead-of-write.patch  0001-W32-pass-correct-with-offset-argc-to-protect_wargv.patch  0001-config.h.win32.in-Always-define-HAVE_LONG_LONG.patch  0001-gdbusauth-fix-crash-when-server-data-send-returns-NU.patch  0001-gwin32.c-Fix-g_win32_check_windows_version-on-32-bit.patch  0001-win32-make-sure-bytes_read-written-is-set-to-0-on-er.patch  Add-gsystemthreadsetname-implementation-for-W32-th.patch  g-win32-command-line-1.patch  g-win32-command-line-2.patch  glib-if_nametoindex.patch  glib-mkenums_perl_path.patch  mod.md  release-x64.bat  release-x86.bat
glib-networking/: 0001-bio-return-0-if-we-have-nothing-to-read-or-to-write.patch  mod.md
glib-openssl/: mod.md
glib-py-wrapper/: glib-py-wrapper.c
glibmm/: props.patch
gobject-introspection/: 00_glib_win_ver.patch
grpc/: 0001-Remove-RuntimeLibrary-setting-from-the-projects.patch  0001-removing-extra-plugins.patch
gsettings-desktop-schemas/: 0001-build-win32-replace.py-Fix-replacing-items-in-files-.patch
gtk/: gdk-window.patch  gtk-accel.patch  gtk-bgimg.patch  gtk-cleanup.patch  gtk-gail.patch  gtk-include.patch  gtk-leak.patch  gtk-libwimp.patch  gtk-multimonitor.patch  gtk-revert-scrolldc-commit.patch  gtk-statusicon.patch  gtk-winapi.patch  gtk.patch  gtkstatusicon-dpichange.patch  mod.md  release-x64.bat  release-x86.bat
gtk3/: 0001-Use-g_snprintf-instead-of-snprintf.patch  0001-win32-destroy-clipboard-notification-window-on-dispo.patch  0001-win32-handle-WM_DISPLAYCHANGE-globally.patch  gtk3-clip-retry-if-opened-by-others.patch  mod.md
gvsbuild/: __init__.py  applications.py  build.py  deps.py  groups.py  info.py  list.py  list_projects.py  main.py  outdated.py  projects.py  tools.py
gvsbuild/patches/check-libs/: meson.build  test_atk.c  test_cairo.c  test_freetype2.c  test_jasper.c  test_libjpeg-turbo.c  test_libjpeg.c  test_wing.c
gvsbuild/patches/glib-py-wrapper/: meson.build
gvsbuild/patches/gperf/: meson.build  meson_options.txt  version.py
gvsbuild/patches/gperf/lib/: meson.build
gvsbuild/patches/gperf/src/: meson.build
gvsbuild/patches/icu/source/data/: export_module.py  meson.build
gvsbuild/patches/libxml2/: 0001-parser-fix-old-SAX1-parser-with-custom-callbacks.patch  0002-sax-always-initialize-SAX1-element-handlers.patch  001-replace-cat-with-python-script.patch  config.h.meson  meson.build  upstream.wrap
gvsbuild/patches/libxml2/include/libxml/: meson.build
gvsbuild/patches/libxml2/pc-files/: libxml-2.0.pc
gvsbuild/patches/pcre2/: meson.build  meson_options.txt
harfbuzz/: mod.md  release-x64.bat  release-x86.bat
installers/: common.iss
jasper/: 001-dont-use-pkg-full-path.patch  002-dont-install-msvc-runtime.patch
json-c/: json-c-0.12.1-20160607.patch
lgi/: fix-loading-non-libtool-style-libs.patch
libarchive/: 0001-Do-not-try-to-compile-with-warnings-as-errors-on-deb.patch  (+1 more)
libcroco/: mod.md
libepoxy/: mod.md  (+3 more)
libxml2/: meson.build  mod.md  readme.txt  release-x64.bat  release-x86.bat
libxml2/include/libxml/: meson.build  xmlversion.h
libxml2/win32/: config.msvc
libxml2/win32/VC12/: config.h  libxml2.vcxproj  libxml2.vcxproj.filters  runsuite.vcxproj
libxml2/win32/vc10/: libxml2.sln  libxml2.vcxproj  libxml2.vcxproj.filters  runsuite.vcxproj
libxml2/win32/vc11/: libxml2.vcxproj  runsuite.vcxproj
libxml2/win32/vc12/: libxml2-focus.vcxproj  libxml2.vcxproj
libxml2/win32/vc14/: libxml2.sln  libxml2.vcxproj  libxml2.vcxproj.filters  runsuite.vcxproj
patches/libsig++/: meson.build
patches/libsigc++/examples/: meson.build
patches/libsigc++/sigc++/: meson.build  sigc++config.h  sigc.rc
patches/libsigc++/tests/: meson.build
patches/pkg-config/: 0001-init-glib.patch  0001-vs2013.patch  config.h  meson.build
patches/pkg-config/glib-lite/: config.h  gdir.c  ggettext.c  gwin32.c  meson.build  readme.txt
patches/pkg-config/glib-lite/glib/: glib.h  glibconfig.h
(+1405 files in other folders)
