[project]
name = "gvsbuild"
version = "2024.10.0"
description = "GTK stack for Windows"
authors = [
    { name = "Ignacio Casal Quinteiro", email = "qignacio@amazon.com" },
    { name = "Dan Yeaw", email = "dan@yeaw.me" }
]
license = "GPL-2.0-only"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Build Tools",
    "Environment :: X11 Applications :: GTK",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "build >=0.9,<1.3",
    "typer[all] >=0.6.1,<0.13.0",
    "setuptools >=69.2,<75.0; python_version >= \"3.12\"",
]
requires-python = ">=3.8,<4.0"

[project.optional-dependencies]
outdated = [
    "lastversion >=2.4.2,<4.0.0",
    "packaging >=21.3,<25.0",
]

[project.scripts]
gvsbuild = 'gvsbuild.main:run'

[[tool.mypy.overrides]]
module = "lastversion"
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{38,39,310,311,312}

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
commands = pytest
deps = pytest
"""

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = [
    "B",
    "B9",
    "C",
    "E",
    "F",
    "W",
]
extend-select = ["I"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.uv]
dev-dependencies = [
    "pre-commit >=3.0.1,<4.0.0",
    "pytest >=7.1.3,<9.0.0",
    "tox >=4.1.2,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
