[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "gvsbuild"
version = "2025.2.0"
description = "GTK stack for Windows"
readme = "README.md"
requires-python = "<4.0,>=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: GTK",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "build >=0.9,<1.3",
    "typer >=0.6.1,<0.16.0",
    "setuptools >=69.2,<77.0; python_version >= \"3.12\"",
]
dynamic = []

[project.license]
file = "COPYING"

[[project.authors]]
name = "Ignacio Casal Quinteiro"
email = "qignacio@amazon.com"

[[project.authors]]
name = "Dan Yeaw"
email = "dan@yeaw.me"

[project.scripts]
gvsbuild = "gvsbuild.main:run"

[project.optional-dependencies]
outdated = [
    "lastversion >=2.4.2,<4.0.0",
    "packaging >=21.3,<25.0",
]

[[tool.mypy.overrides]]
module = "lastversion"
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{39,310,311,312,313}

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
commands = pytest
deps = pytest
"""

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = [
    "B",
    "B9",
    "C",
    "E",
    "F",
    "UP",
    "W",
]
extend-select = ["I"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [ "typer.Argument", "typer.Option",]

[tool.uv]
dev-dependencies = [
    "pre-commit >=3.0.1,<4.0.0",
    "pytest >=7.1.3,<9.0.0",
    "tox >=4.1.2,<5.0.0",
]
